[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Textures/Enemy1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scenes/Game/Entities/Enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/Scenes/Weapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Audio/Effects/attack.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Audio/Effects/miss.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.692, 28.7166 )

[sub_resource type="CircleShape2D" id=2]
radius = 248.101

[node name="Enemy" type="Area2D"]
collision_layer = 2
collision_mask = 11
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
sound_effects = [ ExtResource( 4 ), ExtResource( 5 ) ]

[node name="Sprite" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 11
collide_with_areas = true
collide_with_bodies = false

[node name="VisionSphere" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionSphere"]
shape = SubResource( 2 )

[node name="Weapon" parent="." instance=ExtResource( 3 )]

[node name="EffectPlayer" type="AudioStreamPlayer2D" parent="."]
[connection signal="area_entered" from="VisionSphere" to="." method="_on_VisionSphere_area_entered"]
[connection signal="area_exited" from="VisionSphere" to="." method="_on_VisionSphere_area_exited"]
